Show Argo apps in table

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -525,6 +525,7 @@ table.cell.timeWindow.active = Active
 table.cell.timeWindow.blocked = Blocked
 table.cell.timeWindow.yes = Yes
 table.header.apiGroups = API groups
+table.header.application.namespace.tooltip = Shows the namespace of the application, which is where application resources will be deployed by default. For Argo CD applications, this is the destination namespace.
 table.header.application.clusters.tooltip = Displays the number of remote and local clusters where resources for the application are deployed. Click to search for the remote clusters.
 table.header.application.resource.tooltip = Provides links to each of the resource repositories used by the application.
 table.header.application.timeWindow.tooltip = Indicates if updates to any of the application resources are subject to a deployment time window.
