--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -61,7 +61,7 @@ git:
             local: true
             online: false
             matchingLabel: false
-    - enable: true
+    - enable: false
       name: ui-git-ansible
       type: git
       successNumber: 3 #success number includes the two ansible hooks and the ansible regular task
