add TEST_CONFIG_EXCLUDE_ARGO and refactor

--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -5,7 +5,7 @@ argo:
       name: helloworld-argo-app-1
       namespace: argocd
       type: git
-      successNumber: 3
+      successNumber: 0
       config:
         - url: https://github.com/fxiang1/app-samples.git
           resources: ["route", "service", "replicaset"] #the type of resources this application must deploy
@@ -15,7 +15,7 @@ argo:
           path: helloworld
           gitReconcileOption: merge
           deployment:
-            local: false
+            local: true
             online: false
             matchingLabel: false
 git:
