Add argocd tests (#1057)
* add validateArgoTopology

* add test cases for argo apps

* wip

* add validations for argocd app only on localhost

* no-op change to trigger travis

* add TEST_CONFIG_EXCLUDE_ARGO and refactor

* remove unnecessary dependencies

* fix uncaught error

--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -1,4 +1,23 @@
 ---
+argo:
+  data:
+    - enable: true
+      name: helloworld-argo-app-1
+      namespace: argocd
+      type: git
+      successNumber: 0
+      config:
+        - url: https://github.com/fxiang1/app-samples.git
+          resources: ["route", "service", "replicaset"] #the type of resources this application must deploy
+          username: ""
+          token: ""
+          branch: master
+          path: helloworld
+          gitReconcileOption: merge
+          deployment:
+            local: true
+            online: false
+            matchingLabel: false
 git:
   data:
     - enable: true
