--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -650,11 +650,11 @@ topology.legend.title.integrationplatform = Integration platform
 topology.legend.title.persistentvolumeclaim = PersistentVolumeClaim
 topology.legend.title.replicaset = ReplicaSet
 topology.legend.title.replicationcontroller = ReplicationController
-topology.legend.title.securitycontextconstraints = Security Context Constraints
+topology.legend.title.securitycontextconstraints = SecurityContextConstraints
 topology.legend.title.serviceaccount = ServiceAccount
 topology.legend.title.statefulset = StatefulSet
 topology.legend.title.storageclass = StorageClass
-topology.legend.title.subscriptionblocked = Time Window Subscription
+topology.legend.title.subscriptionblocked = TimeWindowSubscription
 topology.legend.title.imagestream = ImageStream
 topology.namespace = namespace: {0}
 topology.title.application  = application
