Change app name to "Open Cluster Management"

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -79,7 +79,7 @@ combo.subscription = Subscription
 combo.subscription.all = All Subscriptions
 combo.subscription.choose = All subscriptions
 
-common.app.name = Red Hat Advanced Cluster Management for Kubernetes
+common.app.name = Open Cluster Management
 
 creation.app.add.channel = Add another repository
 creation.app.ansible.secret.host=Ansible Tower host
