update argo label and styling

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -168,7 +168,7 @@ dashboard.card.overview.cards.created = Created
 dashboard.card.overview.cards.name = Name
 dashboard.card.overview.cards.namespace = Namespace
 dashboard.card.overview.cards.repoResource.label = Repository resource
-dashboard.card.overview.cards.search.argocd.launch = Launch Argo CD editor
+dashboard.card.overview.cards.search.argocd.launch = Launch Argo editor
 dashboard.card.overview.cards.search.argocd.apps = Search all related applications
 dashboard.card.overview.cards.search.resource = Search resource
 dashboard.card.overview.cards.subs.btn.hide = Hide subscription details
@@ -178,7 +178,7 @@ dashboard.card.overview.cards.timeWindow.edit.label = Edit time window
 dashboard.card.overview.cards.timeWindow.label = Time window
 dashboard.card.overview.cards.timeWindow.set.label = Set time window
 dashboard.card.overview.cards.title = Details
-dashboard.card.overview.cards.argo.app = Argo CD
+dashboard.card.overview.cards.argo.app = Argo
 
 description.ansible.job.status.debug= Use View Resource YAML link below to view the Ansible Job details. Look for the message section and follow the debug instructions available there.
 description.ansible.job.status.empty.err= Ansible task was not executed. Check the Subscription YAML for status errors.
@@ -330,7 +330,7 @@ prop.details.section.service=Service Details
 prop.details.section=Details
 prop.details.section.cluster=Select a cluster to view details
 
-props.show.argocd.editor=Launch Argo CD editor
+props.show.argocd.editor=Launch Argo editor
 props.show.local.yaml=View Resource YAML
 props.show.log=View Pod YAML and Logs
 props.show.search.view=Launch resource in Search
@@ -379,7 +379,7 @@ resource.application.error.msg=This application has no matched subscription. Mak
 resource.argo.application.error.msg=Use the View Resource YAML link above to view the ArgoCD application details. Look for any error messages under the status section to debug.
 resource.applications = Applications
 resource.argo.app.cluster=Created on
-resource.argo.app.route.err = No Argo CD route found for namespace {0} on cluster {1}
+resource.argo.app.route.err = No Argo route found for namespace {0} on cluster {1}
 resource.argo.app.target.cluster=Destination cluster
 resource.argo.app.target.cluster.ns=Destination namespace
 resource.channel = Channel
@@ -526,8 +526,8 @@ table.cell.timeWindow.active = Active
 table.cell.timeWindow.blocked = Blocked
 table.cell.timeWindow.yes = Yes
 table.header.apiGroups = API groups
-table.header.application.namespace.tooltip = Shows the namespace of the application resource, which by default is where the application will deploy other resources. For Argo CD applications, this is the destination namespace.
-table.header.application.clusters.tooltip = Displays the number of remote and local clusters where resources for the application are deployed. For an individual Argo CD application, the name of the destination cluster is shown. Click to search for the clusters.
+table.header.application.namespace.tooltip = Shows the namespace of the application resource, which by default is where the application will deploy other resources. For Argo applications, this is the destination namespace.
+table.header.application.clusters.tooltip = Displays the number of remote and local clusters where resources for the application are deployed. For an individual Argo application, the name of the destination cluster is shown. Click to search for the clusters.
 table.header.application.resource.tooltip = Provides links to each of the resource repositories used by the application.
 table.header.application.timeWindow.tooltip = Indicates if updates to any of the application resources are subject to a deployment time window.
 table.header.applicationName = Application name
