--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ env:
 
 stages:
   - build
+  - unit-test
   - name: test-e2e
     if: env(USE_CLUSTERPOOL) IS blank
   - name: test-e2e-clusterpool
@@ -67,6 +68,16 @@ jobs:
         - make security/scans
         - make build-test-image
         - make push-test-image
+    - stage: unit-test
+      name: "Build and run unit tests"
+      script:
+        - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then export COMPONENT_TAG_EXTENSION="-PR${TRAVIS_PULL_REQUEST}-${TRAVIS_COMMIT}"; fi;
+        - make
+        - make sonar/js/jest-init
+        - make 
+        - make component/pull         
+        - make component/test/unit
+        - make sonar/js
     - stage: test-e2e
       name: "Deploy the image to a cluster and run e2e tests"
       if: type = pull_request
@@ -94,7 +105,7 @@ jobs:
       name: "Publish the image to quay with an official version/sha tag and publish entry to integration pipeline stage"
       if: type = push AND branch =~ /^release-[0-9]+\..*$/
       script:
-        - make
+        - make 
         - make pipeline-manifest/update PIPELINE_MANIFEST_COMPONENT_SHA256=${TRAVIS_COMMIT} PIPELINE_MANIFEST_COMPONENT_REPO=${TRAVIS_REPO_SLUG} PIPELINE_MANIFEST_BRANCH=${TRAVIS_BRANCH}
         - rm -rf pipeline
         - echo "Waiting 120s before publishing test image..." && sleep 120
