--- a/config/config-defaults.json
+++ b/config/config-defaults.json
@@ -1,10 +1,10 @@
 {
+    "API_SERVER_URL": "https://kubernetes.default.svc",
     "contextPath": "/multicloud/applications",
     "httpsPort": 3001,
     "hcmUiApiUrl": "",
     "searchApiUrl": "",
     "headerUrl": "https://management-ingress",
-    "headerContextPath": "/multicloud/header",
     "feature_searchRelated": false,
     "featureFlags": {
         "dashboardLiveUpdates": true,
