UI improvements on subscribed applications

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -34,6 +34,8 @@ app.enter.select.namespace.name=Enter or select a Namespace repository name
 app.enter.select.objectstore.url=Enter or select an ObjectStore bucket URL
 app.enter.select.path=Optional: Enter or select a repository path
 app.enter.select.username=Optional: Enter the Git user name
+app.enter.select.tag=Optional: Enter a specific tag 
+app.enter.select.desiredCommit=Optional: Enter a specific commit hash
 
 application.create.title = Create an application
 application.details = App details
@@ -94,6 +96,8 @@ creation.app.existingRuleCombo=Existing Placement Rules
 creation.app.github.accessid = Access Token
 creation.app.github.branch = Branch
 creation.app.github.path = Path
+creation.app.github.desiredCommit = Desired commit
+creation.app.github.tag = Tag
 creation.app.github.reconcileOption = Reconcile option
 creation.app.github.url = URL
 creation.app.github.user = Username
@@ -112,6 +116,8 @@ creation.app.loading.namespaces=Loading namespaces...
 creation.app.loading.rules=Loading placement rules...
 creation.app.loading.secrets.ns.err=To select existing secrets, application Namespace must be set first
 creation.app.loading.secrets=Loading secrets
+creation.app.reconcileRate = Repository reconcile rate
+creation.app.subReconcileRate = Disable auto-reconciliation
 creation.app.name = Name
 creation.app.namespace = Namespace
 creation.app.namespace.name = Namespace
@@ -589,6 +595,8 @@ tooltip.creation.app.github.accessid = The access token if this is a private Git
 tooltip.creation.app.github.branch = The branch of the Git repository.
 tooltip.creation.app.github.path = The location of the resources on the Git repository.
 tooltip.creation.app.github.reconcileOption = With the Merge option, new fields are added and existing fields are updated in the resource. Choose to merge if resources are updated after the initial deployment. If you choose to replace, the existing resource is replaced with the Git source.
+tooltip.creation.app.github.desiredCommit = If you want to subscribe to a specific commit, you need to specify the desired commit hash. You may need to specify git-clone-depth annotation if your desired commit is older than the last 20 commits.
+tooltip.creation.app.github.tag = If you want to subscribe to a specific tag, you need to specify the tag. If both Git desired commit and tag annotations are specified, the tag will be ignored. You may need to specify git-clone-depth annotation if your desired commit of the tag is older than the last 20 commits.
 tooltip.creation.app.github.url = The URL path for the Git repository.
 tooltip.creation.app.github.user = The username if this is a private Git repository and requires connection.
 tooltip.creation.app.helmrepo.chart.name =  The specific name for the target Helm chart.
@@ -608,6 +616,8 @@ tooltip.creation.app.settings.existingRule=If available in the application names
 tooltip.creation.app.settings.localClusters=Deploy application resources on local cluster only
 tooltip.creation.app.settings.onlineClusters=Deploy your application resources on all online clusters, including your local cluster.
 tooltip.creation.app.settings.onlineClustersOnly=Deploy your application resources on all online clusters.
+tooltip.creation.app.reconcileRate = The frequeny of resource reconciliation that will be used as a global repository setting. The default setting is medium that checks for changes to apply every 3 minutes and re-applies all resources ever 15 minutes even if there is no change. Select low to reconcile every hour and high to reconcile every 2 minutes. By selecting off, the deployed resources are not automatically reconciled.
+tooltip.creation.app.subReconcileRate = Turn the auto-reconciliation off for this specific application regardless of the reconcile rate setting in the repository.
 
 topology.details.close = Close topology details view
 topology.filter.category.clusterStatuses = Cluster status
