--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -371,7 +371,8 @@ raw.spec.startingCSV=Starting CSV
 raw.spec.source=Source
 raw.spec.sourceNamespace=Source Namespace
 raw.spec.installPlanApproval=Install plan approval
-raw.status.decisionCls=Matched Remote Clusters 
+raw.status.decisionCls=Matched Remote Clusters
+raw.status.health.status=Status
 
 refresh = Refresh
 refresh.choose = Choose refresh
