Add tooltip for Argo groups

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -42,7 +42,8 @@ application.details = App details
 application.diagram = Resource topology
 application.diagram.how.to.read = How to read topology
 application.diagram.view.last.time = Last update: {0}
-application.remote.cluster = This application is defined on the remote cluster {0}
+application.remote.cluster = This application is defined on the remote cluster {0}.
+application.argo.group = This is a group of Argo applications that deploy the same resources.
 
 button.cancel = Cancel
 button.copyButton.feedback = Copied to clipboard
