Add Cypress tests for improvements on subscribed applications

--- a/tests/cypress/config/config.e2e.yaml
+++ b/tests/cypress/config/config.e2e.yaml
@@ -12,6 +12,7 @@ git:
           branch: master
           path: mortgagedc
           insecureSkipVerifyOption: true
+          disableAutoReconcileOption: true
           timeWindow:
             setting: true
             type: activeinterval
@@ -35,7 +36,9 @@ git:
           token: ""
           branch: master
           path: helloworld
+          commitHash: a95009282563d40521fe738b6e8ff1741bec528f
           gitReconcileOption: merge
+          repositoryReconcileRate: medium
           deployment:
             local: false
             online: false
@@ -46,6 +49,7 @@ git:
           token: ""
           branch: master
           path: mortgagepod
+          tag: v1.0
           timeWindow:
             setting: true
             type: activeinterval
@@ -145,6 +149,7 @@ helm:
           password: ""
           chartName: aerospike
           insecureSkipVerifyOption: true
+          disableAutoReconcileOption: true
           timeWindow:
             setting: true
             type: blockinterval
@@ -165,6 +170,7 @@ helm:
           chartName: redis
           packageAlias: redis
           packageVersion: 12.2.4
+          repositoryReconcileRate: medium
           deployment:
             local: false
             online: false
