--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -55,7 +55,7 @@ git:
           token: ""
           branch: master
           path: helloworld
-          commitHash: 1adb859f5e998c53435291444c2d963954969b4d #this has to be the private cluster hash!
+          commitHash: 1adb859f5e998c53435291444c2d963954969b4d #this has to be the private repo hash!
           gitReconcileOption: merge
           repositoryReconcileRate: medium
           deployment:
