--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -384,8 +384,9 @@ refresh.interval.seconds = Refresh every {0}s
 
 resource.application = Application
 resource.application.error = Error
+resource.argo.application.health=Health status
 resource.application.error.msg=This application has no matched subscription. Make sure the subscription match selector spec.selector.matchExpressions exists and matches a Subscription resource created in the {0} namespace.
-resource.argo.application.error.msg=Use the View Resource YAML link above to view the ArgoCD application details. Look for any error messages under the status section to debug.
+resource.argo.application.error.msg=The health status for application {0} is {1}. Use the Launch Argo editor action below to view the application details.
 resource.applications = Applications
 resource.argo.app.cluster=Created on
 resource.argo.app.route.err = No Argo route found for namespace {0} on cluster {1}
