--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -88,6 +88,7 @@ common.app.name = Red Hat Advanced Cluster Management for Kubernetes
 creation.app.add.channel = Add another repository
 creation.app.ansible.secret.host=Ansible Tower host
 creation.app.ansible.secret.name = Ansible Tower secret name
+creation.app.ansible.secrets.name = Ansible Tower secrets
 creation.app.ansible.secret.token=Ansible Tower token
 creation.app.channel.group = Resource definition
 creation.app.channel.title = Repository types
