--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -103,12 +103,14 @@ creation.app.github.tag = Tag
 creation.app.github.reconcileOption = Reconcile option
 creation.app.github.url = URL
 creation.app.github.user = Username
+creation.app.github.secret = Secret name
 creation.app.helmrepo.chart.name = Chart name
 creation.app.helmrepo.package.alias = Package alias
 creation.app.helmrepo.package.version = Package version
 creation.app.helmrepo.password = Password
 creation.app.helmrepo.url = URL
 creation.app.helmrepo.user = Username
+creation.app.helmrepo.secret = Secret name
 creation.app.insecureSkipVerify.label = Disable server certificate verification
 creation.app.insecureSkipVerify.git.tooltip = Disable server TLS certificate verification for Git server connection.
 creation.app.insecureSkipVerify.helm.tooltip = Disable server TLS certificate verification for Helm server connection.
@@ -126,6 +128,7 @@ creation.app.namespace.name = Namespace
 creation.app.objectstore.accesskey = Access Key
 creation.app.objectstore.secretkey = Secret Key
 creation.app.objectstore.url = URL
+creation.app.objectstore.secret = Secret name
 creation.app.placement.rule = Select clusters to deploy to
 creation.app.section.prePost=Set pre and post deployment tasks
 creation.app.section.settings = Settings: Specify application behavior
@@ -602,21 +605,24 @@ tooltip.creation.app.github.branch = The branch of the Git repository.
 tooltip.creation.app.github.path = The location of the resources on the Git repository.
 tooltip.creation.app.github.reconcileOption = With the Merge option, new fields are added and existing fields are updated in the resource. Choose to merge if resources are updated after the initial deployment. If you choose to replace, the existing resource is replaced with the Git source.
 tooltip.creation.app.github.desiredCommit = If you want to subscribe to a specific commit, you need to specify the desired commit hash. You might need to specify git-clone-depth annotation if your desired commit is older than the last 20 commits.
-tooltip.creation.app.github.tag = If you want to subscribe to a specific tag, you need to specify the tag. If both Git desired commit and tag annotations are specified, the tag is ignored. You may need to specify git-clone-depth annotation if your desired commit of the tag is older than the last 20 commits.
+tooltip.creation.app.github.tag = If you want to subscribe to a specific tag, you need to specify the tag. If both Git desired commit and tag annotations are specified, the tag is ignored. You might need to specify git-clone-depth annotation if your desired commit of the tag is older than the last 20 commits.
 tooltip.creation.app.github.url = The URL path for the Git repository.
 tooltip.creation.app.github.user = The username if this is a private Git repository and requires connection.
+tooltip.creation.app.github.secret = The secret name that is used for authentication by this private Git repository.
 tooltip.creation.app.helmrepo.chart.name =  The specific name for the target Helm chart.
 tooltip.creation.app.helmrepo.package.alias = The alias name for the target Helm chart.
 tooltip.creation.app.helmrepo.package.version = The version or versions for the deployable. You can use a range of versions in the form >1.0, or <3.0.
 tooltip.creation.app.helmrepo.password = The password if this is a private Helm repository and requires connection.
 tooltip.creation.app.helmrepo.url = The URL path for the Helm repository.
 tooltip.creation.app.helmrepo.user = The username if this is a private Helm repository and requires connection.
+tooltip.creation.app.helmrepo.secret = The secret name that is used for authentication by this private Helm repository.
 tooltip.creation.app.name = Application name
 tooltip.creation.app.namespace = Set the application namespace from the list of accessible namespaces, or enter a name to create a namespace. You need authority to create namespace resources. 
 tooltip.creation.app.namespace.name = The name of the namespace repository.
 tooltip.creation.app.objectstore.accesskey = The access key for accessing the object store.
 tooltip.creation.app.objectstore.secretkey = The secret key for accessing the object store.
 tooltip.creation.app.objectstore.url = The URL path for the object store.
+tooltip.creation.app.objectstore.secret = The secret name that is used for authentication by this repository.
 tooltip.creation.app.settings.clusterSelector=Deploy application resources only on clusters matching specified labels
 tooltip.creation.app.settings.existingRule=If available in the application namespace, you can select a predefined placement configuration 
 tooltip.creation.app.settings.localClusters=Deploy application resources on local cluster only
