Show new subscription annotations in topology details
Signed-off-by: sahare <sahare@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -484,6 +484,9 @@ spec.selector.matchExpressions.err=This application has no subscription match se
 spec.selector.matchExpressions=Subscription Selector
 spec.subscr.annotations.gitBranch=Git branch
 spec.subscr.annotations.gitPath=Git path
+spec.subscr.annotations.gitTag=Git tag
+spec.subscr.annotations.gitCommit=Git commit
+spec.subscr.annotations.reconcileRate=Reconcile rate
 spec.subscr.timeWindow.days=Time Window days
 spec.subscr.timeWindow.hours=Time Window hours
 spec.subscr.timeWindow.none=This subscription has no time window set.
