squash for signoff
Signed-off-by: Richie Piya <rpiyasirisilp@gmail.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -178,6 +178,9 @@ dashboard.card.overview.cards.clusters = Clusters
 dashboard.card.overview.cards.created = Created
 dashboard.card.overview.cards.name = Name
 dashboard.card.overview.cards.namespace = Namespace
+dashboard.card.overview.cards.destination.namespace = Destination namespace
+dashboard.card.overview.cards.destination.namespace.cluster.tooltip = Namespace where the application resources on cluster {0} are deployed.
+dashboard.card.overview.cards.destination.namespace.tooltip = Namespace where the application resources are deployed.
 dashboard.card.overview.cards.repoResource.label = Repository resource
 dashboard.card.overview.cards.search.argocd.launch = Launch Argo editor
 dashboard.card.overview.cards.search.argocd.apps = Search all related applications
@@ -376,7 +379,7 @@ raw.spec.startingCSV=Starting CSV
 raw.spec.source=Source
 raw.spec.sourceNamespace=Source Namespace
 raw.spec.installPlanApproval=Install plan approval
-raw.status.decisionCls=Matched Remote Clusters
+raw.status.decisionCls=Matched Clusters
 raw.status.health.status=Status
 
 refresh = Refresh
