Add steps for users to generate their own certs
Signed-off-by: Feng Xiang <fxiang@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,6 @@ build-harness/
 !vbh/build-harness-extensions
 tests/userCreatedByTestSuite
 userCreatedByTestSuite
-sslcert
+sslcert/server.crt
+sslcert/server.key
 Dockerfile.tmp
