--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,7 @@ build-harness/
 !vbh/build-harness-extensions
 tests/userCreatedByTestSuite
 userCreatedByTestSuite
-sslcert
+sslcert/server.crt
+sslcert/server.key
+sslcert/server.csr
 Dockerfile.tmp
