update error msg for unavailable search
Signed-off-by: Richie Piya <rpiyasirisilp@gmail.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -253,6 +253,7 @@ error.create.syntax = Syntax error: {0}
 error.default.description = The Search component is not available and cannot retrieve application resources. 
 error.load.resource = Error:
 error.load.topology = Load topology failure
+error.launch.argo.editor = Route information is not available and could not be retrieved.
 
 filter.remove.label=Filter
 filter.view.all=All
