--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -24,9 +24,7 @@ app.enter.helmrepo.package.version=Optional: Enter the version or versions for t
 app.enter.helmrepo.password= Optional: Enter the Helm repository password
 app.enter.helmrepo.username=Optional: Enter the Helm repository user name
 app.enter.secretkey=Optional: Enter the object store secret key
-app.enter.select.ansibleSecretName=Create new or select an existing secret from the list.
-app.enter.select.ansibleTowerHost=Enter Ansible Tower host
-app.enter.select.ansibleTowerToken=Enter Ansible Tower token
+app.enter.select.ansibleSecretName=Select an existing secret from the list.
 app.enter.select.branch=Optional: Enter or select a branch
 app.enter.select.github.url=Enter or select a Git URL
 app.enter.select.helmrepo.url=Enter or select a Helm repository URL
@@ -87,8 +85,8 @@ common.app.name = Red Hat Advanced Cluster Management for Kubernetes
 
 creation.app.add.channel = Add another repository
 creation.app.ansible.secret.host=Ansible Tower host
-creation.app.ansible.secret.name = Ansible Tower secret name
-creation.app.ansible.secrets.name = Ansible Tower secrets
+creation.app.ansible.credential.name = Ansible Automation Platform credential
+creation.app.ansible.credential = Create Ansible Automation Platform credential
 creation.app.ansible.secret.token=Ansible Tower token
 creation.app.channel.group = Resource definition
 creation.app.channel.title = Repository types
@@ -163,6 +161,7 @@ creation.missing.timeWindow.days = Select at least one day to create a time wind
 creation.missing.timeWindow.timezone = Select a timezone to create a time window.
 creation.missing.timeWindow.timelist = Select start time and end time to create a time window.
 creation.must.select.resource.type = Must select resource type
+creation.ocp.cloud.add.connection = Add credentials
 creation.ocp.cluster.enter.value = Enter {0}
 creation.ocp.toggle=Application settings
 creation.valid.alphanumeric = Value must be alphanumeric.
@@ -239,6 +238,7 @@ editor.bar.redo=Redo
 editor.bar.reset=Reset
 editor.bar.undo=Undo
 editor.bar.update=Update
+editor.show.secrets= Show secrets
 
 error.create = Create resource error
 error.create.reason = Cannot find resource type "undefined"
