add validation for ns
Signed-off-by: chenz4027 <magchen@redhat.com>

--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -4,6 +4,7 @@ argo:
     - enable: true
       name: helloworld-argo-app-1
       namespace: argocd
+      deployedNamespace: argo-ns-1
       type: git
       successNumber: 3
       config:
