--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -85,7 +85,8 @@ git:
             local: true
             online: false
             matchingLabel: false
-    - enable: true
+    # disable ansible test 
+    - enable: false
       name: ui-git-ansible
       type: git
       successNumber: 3 #success number includes the two ansible hooks and the ansible regular task
