--- a/tests/cypress/templates/secret_yaml/ansible-secret.yaml
+++ b/tests/cypress/templates/secret_yaml/ansible-secret.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 data:
-  metadata: 
+  token:
+  host: 
 kind: Secret
 metadata:
   labels:
     cluster.open-cluster-management.io/cloudconnection: ""
     cluster.open-cluster-management.io/provider: ans
   name: ansible-tower-secret
-  namespace: open-cluster-management
+  namespace: default
 type: Opaque
