--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -253,7 +253,7 @@ editor.show.secrets=Show secrets
 error.create = Create resource error
 error.create.reason = Cannot find resource type "undefined"
 error.create.syntax = Syntax error: {0}
-error.default.description = The Search component is not available and cannot retrieve application resources. 
+error.default.description = An unexpected error occurred. Try again. 
 error.load.resource = Error:
 error.load.topology = Load topology failure
 error.launch.argo.editor = Route information is not available and could not be retrieved.
