enable ansible test
Signed-off-by: chenz4027 <magchen@redhat.com>

--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -85,8 +85,7 @@ git:
             local: true
             online: false
             matchingLabel: false
-    # disable ansible test
-    - enable: false
+    - enable: true
       name: ui-git-ansible
       type: git
       successNumber: 3 #success number includes the two ansible hooks and the ansible regular task
