refactor ansible provider test cases (#1166)
* refactor ansible provider test cases

Signed-off-by: chenz4027 <magchen@redhat.com>

* no-op change

Signed-off-by: chenz4027 <magchen@redhat.com>

* fix error

Signed-off-by: chenz4027 <magchen@redhat.com>

* enable ansible test

Signed-off-by: chenz4027 <magchen@redhat.com>

* fix id selection

Signed-off-by: chenz4027 <magchen@redhat.com>

* fix dropdown selection

Signed-off-by: chenz4027 <magchen@redhat.com>

--- a/tests/cypress/config/config.func.yaml
+++ b/tests/cypress/config/config.func.yaml
@@ -85,8 +85,7 @@ git:
             local: true
             online: false
             matchingLabel: false
-    # disable ansible test 
-    - enable: false
+    - enable: true
       name: ui-git-ansible
       type: git
       successNumber: 3 #success number includes the two ansible hooks and the ansible regular task
@@ -98,9 +97,7 @@ git:
           branch: master
           path: ansible
           gitReconcileOption: merge
-          ansibleSecretName: ui-git-ansible-secret
-          ansibleHost: ""
-          ansibleToken: ""
+          ansibleSecretName: ansible-tower-secret
           deployment:
             local: true
             online: false
