Add S3 region to the application editor (#1170)
Signed-off-by: sahare <sahare@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -24,6 +24,7 @@ app.enter.helmrepo.package.version=Optional: Enter the version or versions for t
 app.enter.helmrepo.password= Optional: Enter the Helm repository password
 app.enter.helmrepo.username=Optional: Enter the Helm repository user name
 app.enter.secretkey=Optional: Enter the object store secret key
+app.enter.region=Optional: Enter the AWS region of the S3 bucket 
 app.enter.select.ansibleSecretName=Select an existing secret from the list.
 app.enter.select.branch=Optional: Enter or select a branch
 app.enter.select.github.url=Enter or select a Git URL
@@ -94,7 +95,7 @@ creation.app.channel.type = Select the type of repository where resources that y
 creation.app.channels = Repository location for resources
 creation.app.delete.channel = Delete repository
 creation.app.existingRuleCombo=Existing Placement Rules
-creation.app.github.accessid = Access Token
+creation.app.github.accessid = Access token
 creation.app.github.branch = Branch
 creation.app.github.path = Path
 creation.app.github.desiredCommit = Commit hash
@@ -124,8 +125,9 @@ creation.app.subReconcileRate = Disable auto-reconciliation
 creation.app.name = Name
 creation.app.namespace = Namespace
 creation.app.namespace.name = Namespace
-creation.app.objectstore.accesskey = Access Key
-creation.app.objectstore.secretkey = Secret Key
+creation.app.objectstore.accesskey = Access key
+creation.app.objectstore.secretkey = Secret key
+creation.app.objectstore.region = Region
 creation.app.objectstore.url = URL
 creation.app.objectstore.secret = Secret name
 creation.app.placement.rule = Select clusters to deploy to
@@ -635,6 +637,7 @@ tooltip.creation.app.namespace = Set the application namespace from the list of 
 tooltip.creation.app.namespace.name = The name of the namespace repository.
 tooltip.creation.app.objectstore.accesskey = The access key for accessing the object store.
 tooltip.creation.app.objectstore.secretkey = The secret key for accessing the object store.
+tooltip.creation.app.objectstore.region = The AWS Region of the S3 bucket. This field is required for Amazon S3 buckets only.
 tooltip.creation.app.objectstore.url = The URL path for the object store.
 tooltip.creation.app.objectstore.secret = The name of the secret that is used for authentication by this repository.
 tooltip.creation.app.settings.clusterSelector=Deploy application resources only on clusters matching specified labels
