--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -280,6 +280,7 @@ find.label = Find
 import.form.invalid.dns.label = The value must be a valid DNS label that consists of up to 63 lowercase alphanumeric characters. The character '-' is also permitted, as long as it does not appear in the first or last position.
 
 load.app.info.notfound=Application {0} not found. If the application was just created wait for the operation to complete, otherwise ensure the application exists and that you are assigned a role with viewing access.
+load.app.cluster.offline=This application is created on cluster {0}, which is currently offline. Make sure the cluster is online before accessing this application.
 
 modal.button.cancel = Cancel
 modal.button.submit = Submit
