--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build:watch": "webpack --progress --watch",
     "build": "npm run clean && webpack --config webpack.dll.js --progress && webpack --progress",
     "build:production": "npm run build:dll:production && cross-env BUILD_ENV=production webpack",
-    "build:dll:production": "cross-env BUILD_ENV=production webpack --config webpack.dll.js",
-    "build:dll": "webpack --config webpack.dll.js --progress",
+    "build:dll:production": "cross-env BUILD_ENV=production webpack --config webpack.dll.js --mode=production",
+    "build:dll": "webpack --config webpack.dll.js --progress --mode=development",
     "shrinkwrap:clean": "del-cli node_modules npm-shrinkwrap.json && npm install --no-optional && npm prune && npm shrinkwrap",
     "lint": "eslint --ext .jsx,.js .",
     "lint:fix": "eslint --ext .jsx,.js --fix .",
@@ -70,14 +70,14 @@
     "apollo-client": "^2.2.8",
     "apollo-link-retry": "^2.2.14",
     "async": "^2.1.5",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.0.0",
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.5",
-    "copy-webpack-plugin": "^6.4.1",
+    "copy-webpack-plugin": "^8.1.1",
     "cross-env": "^5.1.4",
     "csurf": "^1.9.0",
     "cypress-multi-reporters": "^1.4.0",
@@ -94,7 +94,7 @@
     "graphql": "^15.5.0",
     "graphql-tag": "^2.11.0",
     "handlebars": "^4.7.7",
-    "handlebars-loader": "^1.6.0",
+    "handlebars-loader": "^1.7.1",
     "helmet": "^3.23.3",
     "http-proxy-middleware": "^1.0.6",
     "ignore-styles": "^5.0.1",
@@ -147,10 +147,10 @@
     "request": "^2.88.2",
     "requestretry": "^4.1.1",
     "reselect": "^3.0.1",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^11.0.1",
     "svg-loader": "0.0.2",
     "svg-react-loader": "^0.4.6",
-    "svg-sprite-loader": "^5.2.1",
+    "svg-sprite-loader": "^6.0.6",
     "svg.js": "^2.6.5",
     "temptifly": "^0.3.20",
     "watchr": "^4.0.1",
@@ -163,14 +163,14 @@
     "@cypress/code-coverage": "^3.8.2",
     "@slack/web-api": "^5.15.0",
     "apollo-cache-inmemory": "^1.6.2",
-    "assets-webpack-plugin": "^5.1.2",
+    "assets-webpack-plugin": "^7.1.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-dev-expression": "^0.2.1",
     "chromedriver": "^89.0.0",
-    "compression-webpack-plugin": "^4.0.1",
+    "compression-webpack-plugin": "^7.1.2",
     "cross-fetch": "^3.0.6",
-    "css-loader": "^1.0.1",
+    "css-loader": "^5.2.4",
     "del-cli": "^3.0.1",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.15.5",
@@ -198,20 +198,22 @@
     "jest-yaml-transform": "^0.2.0",
     "jsonfile": "^4.0.0",
     "lint-staged": "^7.0.0",
+    "mini-css-extract-plugin": "^1.5.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "node-sass": "^4.14.1",
-    "postcss-loader": "^2.1.4",
+    "postcss": "^8.2.14",
+    "postcss-loader": "^5.2.0",
     "prettier": "1.11.0",
     "properties-parser": "^0.3.1",
     "redux-mock-store": "^1.5.4",
-    "resolve-url-loader": "^3.1.2",
-    "mini-css-extract-plugin": "^0.12.0",
+    "resolve-url-loader": "^3.1.3",
+    "sass": "^1.32.12",
     "selenium-standalone": "^6.20.1",
     "style-loader": "^0.21.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.5.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "webpack": "^5.36.2",
     "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.6.0",
     "xml2json": "^0.11.0"
   }
 }
