--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -350,6 +350,7 @@ placeholder.filterInput.tags = Add filter tags...
 prop.details.section.service=Service Details
 prop.details.section=Details
 prop.details.section.cluster=Select a cluster to view details
+prop.warning.section=Warning
 
 props.show.argocd.editor=Launch Argo editor
 props.show.local.yaml=View Resource YAML
