update dev mode
Signed-off-by: Valentina Birsan <vbirsan@redhat.com>

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start:production": "cross-env NODE_ENV=production node app.js",
     "clean": "del-cli dll public/*",
     "build:test": "webpack --progress",
-    "build:watch": "webpack --progress --watch",
-    "build": "npm run clean && webpack --config webpack.dll.js --progress && webpack --progress",
-    "build:production": "npm run build:dll:production && cross-env BUILD_ENV=production webpack",
+    "build:watch": "webpack --progress --watch --mode=development",
+    "build": "npm run clean && webpack --mode=development --config webpack.dll.js --progress && webpack --mode=development --progress",
+    "build:production": "npm run build:dll:production && cross-env BUILD_ENV=production webpack --mode=production",
     "build:dll:production": "cross-env BUILD_ENV=production webpack --config webpack.dll.js --mode=production",
     "build:dll": "webpack --config webpack.dll.js --progress --mode=development",
     "shrinkwrap:clean": "del-cli node_modules npm-shrinkwrap.json && npm install --no-optional && npm prune && npm shrinkwrap",
