show argo app set in main details card
Signed-off-by: Richie Piya <rpiyasirisilp@gmail.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -362,6 +362,7 @@ props.show.yaml.subscr.ns=View all subscriptions in {0} namespace
 props.show.yaml=View Resource YAML
 props.show.yaml.argoset=Application Set
 props.show.yaml.argoset.yaml=View Application Set YAML
+props.show.yaml.argoset.maincard = View application set
 props.view.yaml=View Topology YAML
 
 raw.spec.accessmode=Access Mode
