--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "moment-timezone": "^0.5.31",
     "monaco-editor": "^0.20.0",
     "morgan": "^1.10.0",
-    "nconf": "^0.11.0",
+    "nconf": "^0.11.2",
     "node-i18n-util": "^1.0.2",
     "normalizr": "^3.6.1",
     "null-loader": "^3.0.0",
@@ -158,7 +158,6 @@
   },
   "devDependencies": {
     "@babel/runtime": "^7.12.5",
-    "@cypress/code-coverage": "^3.8.2",
     "@slack/web-api": "^5.15.0",
     "apollo-cache-inmemory": "^1.6.2",
     "assets-webpack-plugin": "^7.1.0",
@@ -190,7 +189,7 @@
     "geckodriver": "^1.20.0",
     "git-revision-webpack-plugin": "^2.5.1",
     "husky": "^1.3.1",
-    "jest": "25.5.4",
+    "jest": "^26.6.3",
     "jest-canvas-mock": "^2.3.0",
     "jest-handlebars": "^1.0.1",
     "jest-tap-reporter": "^1.9.0",
