--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -198,7 +198,7 @@ dashboard.card.overview.cards.timeWindow.set.label = Set time window
 dashboard.card.overview.cards.title = Details
 dashboard.card.overview.cards.argo.app = Argo
 
-description.ansible.job.status.debug= Use View Resource YAML link below to view the Ansible Job details. Look for the message section and follow the debug instructions available there.
+description.ansible.job.status.debug= Use View resource YAML link below to view the Ansible Job details. Look for the message section and follow the debug instructions available there.
 description.ansible.job.status.empty.err= Ansible task was not executed. Check the Subscription YAML for status errors.
 description.ansible.job.status.empty= Ansible Tower job was not executed.
 description.ansible.job.status=Ansible Tower Job status
@@ -353,15 +353,15 @@ prop.details.section.cluster=Select a cluster to view details
 prop.warning.section=Warning
 
 props.show.argocd.editor=Launch Argo editor
-props.show.local.yaml=View Resource YAML
+props.show.local.yaml=View resource YAML
 props.show.log=View Pod YAML and Logs
 props.show.route.url=Launch Route URL
 props.show.search.view=Launch resource in Search
 props.show.yaml.rules.ns=View all placement rules in {0} namespace
 props.show.yaml.subscr.ns=View all subscriptions in {0} namespace
-props.show.yaml=View Resource YAML
-props.show.yaml.argoset=Application Set
-props.show.yaml.argoset.yaml=View Application Set YAML
+props.show.yaml=View resource YAML
+props.show.yaml.argoset=Application set
+props.show.yaml.argoset.yaml=View application set YAML
 props.show.yaml.argoset.maincard = View application set
 props.view.yaml=View Topology YAML
 
@@ -472,7 +472,7 @@ resource.subscription.local=Subscription deployed on local cluster
 resource.subscription.nostatus.hub= This subscription has no status. If the status does not change to {0} after waiting for initial creation, verify that the multicluster-operators-hub-subscription pod is running on hub.
 resource.subscription.nostatus.remote=This subscription has no status. If the status does not change to {0} after waiting for initial creation, verify that the klusterlet-addon-appmgr pod is running on the remote cluster.
 resource.subscription.placed.error=This subscription was not added to a managed cluster. If this status does not change after waiting for initial creation, ensure the Placement Rule resource is valid and exists in the {0} namespace and that the klusterlet-addon-appmgr pod runs on the managed clusters.
-resource.subscription.status.failed.phase= Some resources failed to deploy. Use View Resource YAML link below to view the details.
+resource.subscription.status.failed.phase= Some resources failed to deploy. Use View resource YAML link below to view the details.
 resource.subscription.remote=Remote subscriptions
 resource.subscriptionblocked = Time Window Subscription
 resource.nostatus=No status
