Initial implementation of sync apps
Signed-off-by: sahare <sahare@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -330,6 +330,9 @@ modal.remove.application.shared.resources = This application uses the following 
 modal.remove.application.child.resources =  This subscription deploys the following resources, which will be removed:
 modal.remove.application.sibling.resources = Shared with:
 modal.remove.confirm = Removing {0} is irreversible. Are you sure that you want to continue?
+modal.sync-hcmapplication.heading = Sync application
+modal.sync-hcmapplication.label = Application
+modal.sync.confirm = Syncing {0} is irreversible. Are you sure that you want to continue?
 modal.resource-filter.label = Resource Filter
 
 name.label = Name
@@ -545,6 +548,7 @@ svg.description.welcome = Welcome image
 table.actions.applications.edit = Edit application
 table.actions.applications.remove = Delete application
 table.actions.applications.search = Search application
+table.actions.applications.sync = Sync application
 table.actions.applications.view = View application
 table.actions.channels.edit = Edit channel
 table.actions.channels.remove = Delete channel
@@ -556,6 +560,7 @@ table.actions.placementrules.search = Search placement rule
 table.actions.remove = Remove
 table.actions.remove.unauthorized = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 table.actions.remove.child.application = This application is deployed by the subscription {0}. The delete action might be reverted when resources are reconciled with the resource repository.
+table.actions.sync.unauthorized = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 table.actions.subscriptions.edit = Edit subscription
 table.actions.subscriptions.remove = Delete subscription
 table.actions.subscriptions.search = Search subscription
