--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -15,6 +15,7 @@ actions.create.application = Create application
 actions.create.application.access.denied = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 actions.save = Save
 actions.searchResources = Find resources
+actions.sync = Sync application
 
 app.enter.access.token= Optional: Enter the Git access token
 app.enter.accesskey=Optional: Enter the object store access key
@@ -181,11 +182,16 @@ dashboard.card.overview.cards.cluster.resource.status.argo.tooltip = Status repr
 dashboard.card.overview.cards.clusters = Clusters
 dashboard.card.overview.cards.clusters.argo.tooltip = Number of clusters where the grouped Argo applications' resources are deployed.
 dashboard.card.overview.cards.created = Created
+dashboard.card.overview.cards.argo.synced = Last synced
+dashboard.card.overview.cards.synced = Last sync requested
 dashboard.card.overview.cards.name = Name
 dashboard.card.overview.cards.namespace = Namespace
 dashboard.card.overview.cards.namespace.argo.tooltip = Namespace where the selected Argo application resources are deployed.
 dashboard.card.overview.cards.server = Server
 dashboard.card.overview.cards.server.tooltip = Cluster where the selected Argo application resources are deployed.
+dashboard.card.overview.cards.argo.lastSynced.tooltip = Date and time of the most recent sync for application resources.
+dashboard.card.overview.cards.lastSynced.tooltip = Date and time of the most recent sync request for application resources.
+dashboard.card.overview.cards.sync = Sync
 dashboard.card.overview.cards.repoResource.label = Repository resource
 dashboard.card.overview.cards.search.argocd.launch = Launch Argo editor
 dashboard.card.overview.cards.search.argocd.apps = Search all related applications
@@ -548,7 +554,6 @@ svg.description.welcome = Welcome image
 table.actions.applications.edit = Edit application
 table.actions.applications.remove = Delete application
 table.actions.applications.search = Search application
-table.actions.applications.sync = Sync application
 table.actions.applications.view = View application
 table.actions.channels.edit = Edit channel
 table.actions.channels.remove = Delete channel
