Handle error and success messages
Signed-off-by: sahare <sahare@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -13,9 +13,10 @@ action = Action
 actions.cancel= Cancel
 actions.create.application = Create application
 actions.create.application.access.denied = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
+actions.sync.application = Sync application
+actions.sync.application.access.denied = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 actions.save = Save
 actions.searchResources = Find resources
-actions.sync = Sync application
 
 app.enter.access.token= Optional: Enter the Git access token
 app.enter.accesskey=Optional: Enter the object store access key
@@ -182,16 +183,20 @@ dashboard.card.overview.cards.cluster.resource.status.argo.tooltip = Status repr
 dashboard.card.overview.cards.clusters = Clusters
 dashboard.card.overview.cards.clusters.argo.tooltip = Number of clusters where the grouped Argo applications' resources are deployed.
 dashboard.card.overview.cards.created = Created
-dashboard.card.overview.cards.argo.synced = Last synced
-dashboard.card.overview.cards.synced = Last sync requested
 dashboard.card.overview.cards.name = Name
 dashboard.card.overview.cards.namespace = Namespace
 dashboard.card.overview.cards.namespace.argo.tooltip = Namespace where the selected Argo application resources are deployed.
 dashboard.card.overview.cards.server = Server
 dashboard.card.overview.cards.server.tooltip = Cluster where the selected Argo application resources are deployed.
+dashboard.card.overview.cards.argo.synced = Last synced
+dashboard.card.overview.cards.synced = Last sync requested
 dashboard.card.overview.cards.argo.lastSynced.tooltip = Date and time of the most recent sync for application resources.
 dashboard.card.overview.cards.lastSynced.tooltip = Date and time of the most recent sync request for application resources.
 dashboard.card.overview.cards.sync = Sync
+dashboard.card.overview.cards.sync.success = Sync request submitted
+dashboard.card.overview.cards.sync.error = Sync request failed
+dashboard.card.overview.cards.sync.success.body = The application resources are synchronizing with the source repository.
+dashboard.card.overview.cards.sync.error.body = The application resources failed to synchronize with the source repository. Try again.
 dashboard.card.overview.cards.repoResource.label = Repository resource
 dashboard.card.overview.cards.search.argocd.launch = Launch Argo editor
 dashboard.card.overview.cards.search.argocd.apps = Search all related applications
@@ -565,7 +570,6 @@ table.actions.placementrules.search = Search placement rule
 table.actions.remove = Remove
 table.actions.remove.unauthorized = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 table.actions.remove.child.application = This application is deployed by the subscription {0}. The delete action might be reverted when resources are reconciled with the resource repository.
-table.actions.sync.unauthorized = You are not authorized to complete this action. See your cluster administrator for role-based access control information.
 table.actions.subscriptions.edit = Edit subscription
 table.actions.subscriptions.remove = Delete subscription
 table.actions.subscriptions.search = Search subscription
