--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -188,15 +188,15 @@ dashboard.card.overview.cards.namespace = Namespace
 dashboard.card.overview.cards.namespace.argo.tooltip = Namespace where the selected Argo application resources are deployed.
 dashboard.card.overview.cards.server = Server
 dashboard.card.overview.cards.server.tooltip = Cluster where the selected Argo application resources are deployed.
-dashboard.card.overview.cards.argo.synced = Last synced
+dashboard.card.overview.cards.argo.synced = Last reconciled
 dashboard.card.overview.cards.synced = Last sync requested
-dashboard.card.overview.cards.argo.lastSynced.tooltip = Date and time of the most recent sync for application resources.
+dashboard.card.overview.cards.argo.lastSynced.tooltip = Date and time of the most recent reconcile for application resources.
 dashboard.card.overview.cards.lastSynced.tooltip = Date and time of the most recent sync request for application resources.
 dashboard.card.overview.cards.sync = Sync
 dashboard.card.overview.cards.sync.success = Sync request submitted
 dashboard.card.overview.cards.sync.error = Sync request failed
-dashboard.card.overview.cards.sync.success.body = The application resources are synchronizing with the source repository.
-dashboard.card.overview.cards.sync.error.body = The application resources failed to synchronize with the source repository. Try again.
+dashboard.card.overview.cards.sync.success.body = The application sync request was submitted successfully.
+dashboard.card.overview.cards.sync.error.body = The application sync request failed to submit. Try again.
 dashboard.card.overview.cards.repoResource.label = Repository resource
 dashboard.card.overview.cards.search.argocd.launch = Launch Argo editor
 dashboard.card.overview.cards.search.argocd.apps = Search all related applications
@@ -343,7 +343,7 @@ modal.remove.application.sibling.resources = Shared with:
 modal.remove.confirm = Removing {0} is irreversible. Are you sure that you want to continue?
 modal.sync-hcmapplication.heading = Sync application
 modal.sync-hcmapplication.label = Application
-modal.sync.confirm = Syncing {0} is irreversible. Are you sure that you want to continue?
+modal.sync.confirm = Synchronizing application resources with the source repository
 modal.resource-filter.label = Resource Filter
 
 name.label = Name
