Update unit tests
Signed-off-by: sahare <sahare@redhat.com>

--- a/nls/platform.properties
+++ b/nls/platform.properties
@@ -343,7 +343,7 @@ modal.remove.application.sibling.resources = Shared with:
 modal.remove.confirm = Removing {0} is irreversible. Are you sure that you want to continue?
 modal.sync-hcmapplication.heading = Sync application
 modal.sync-hcmapplication.label = Application
-modal.sync.confirm = Synchronizing application resources with the source repository
+modal.sync.confirm = Synchronize application resources with the source repository
 modal.resource-filter.label = Resource Filter
 
 name.label = Name
